--- a/posts/Not-Implemented-Error-Fast-AI-Vision-Learner.mdx
+++ b/posts/Not-Implemented-Error-Fast-AI-Vision-Learner.mdx
@@ -5,6 +5,7 @@ categories:
   - FastAI
   - Machine Learning
 description: How to debug a Not Implemented Error in FastAI in lesson 1
+hide: true
 ---
 
 This is not a complicated post - just a quick solution. If you're getting an error that looks like this on Paperspace, just use Colab.
