--- a/posts/a-guide-to-rwkv.mdx
+++ b/posts/a-guide-to-rwkv.mdx
@@ -4,6 +4,7 @@ date: 2023-09-28
 categories:
   - Machine Learning
 description: A guide to a strong open-source transformer alternative
+hide: true
 ---
 
 ## Introduction
