--- a/posts/building-a-local-chatgpt-clone-from-scratch.mdx
+++ b/posts/building-a-local-chatgpt-clone-from-scratch.mdx
@@ -3,7 +3,7 @@ title: Why use Chat GPT when you can build your own?
 date: 2023-06-09
 categories:
   - Machine Learning
-description: I've been toying with this idea for a while and I think I have some of the pieces in place to make it happen. Disclaimer - this has significantly reduced capabilities.
+description: Implementing persistent conversational memory 
 ---
 
 ## Introduction
