--- a/posts/classifying-disaster-tweets-on-kaggle.mdx
+++ b/posts/classifying-disaster-tweets-on-kaggle.mdx
@@ -6,6 +6,7 @@ categories:
   - Deep Learning
   - Natural Language Processing
 description: I recently took some time building out some simple models to classify tweets on kaggle - let's walk through and see what I managed to build
+hide: true
 ---
 
 ## Premise
