--- a/posts/click-me.mdx
+++ b/posts/click-me.mdx
@@ -5,6 +5,7 @@ categories:
   - ContentLayer
   - NextJS
 description: I've been working on a new website for a while now. Here's what I've learned.
+hide: true
 ---
 
 ### Introduction
