--- a/posts/configuring-next-auth-with-nextjs.mdx
+++ b/posts/configuring-next-auth-with-nextjs.mdx
@@ -7,6 +7,7 @@ categories:
   - Authentication
 description:
   It's a bit tricky to set up Next Auth with NextJS. Let's walk through the entire process from start to finish.
+hide: true
 ---
 
 ## Introduction 
