--- a/posts/crawling-google-maps-saved-list.mdx
+++ b/posts/crawling-google-maps-saved-list.mdx
@@ -7,7 +7,7 @@ categories:
   - Web Scraping
   - Streamlit
 description:
-  Google Maps sucks at letting you sort through your saved places. Let's try to get some more insights into the places that we like
+  Using LLMs to automatically tag and categorize your favourite eating spots
 ---
 
 # Introduction
