--- a/posts/fastai.mdx
+++ b/posts/fastai.mdx
@@ -6,6 +6,7 @@ categories:
   - Machine Learning
   - Notes
 description: Here are some of my notes for Fast AI part 1. I'm going through the course and the book and I'm trying to consolidate everything here.
+hide: true
 ---
 
 <Callout>
