--- a/posts/implementing-magic-links-with-resend-and-kysely-adaptor.mdx
+++ b/posts/implementing-magic-links-with-resend-and-kysely-adaptor.mdx
@@ -5,6 +5,7 @@ categories:
   - NextJS
   - Authentication
 description: Revising my original article on implementing magic links with Next-Auth, NextJS and Prisma to use Resend and Kysely instead.
+hide: true
 ---
 
 ## Introduction
