--- a/posts/neural-networks-from-scratch.mdx
+++ b/posts/neural-networks-from-scratch.mdx
@@ -6,6 +6,7 @@ categories:
   - Machine Learning
   - Notes
 description: Here are some of my notes for Neural Networks From Scratch
+hide: true
 ---
 
 ## Introduction
