--- a/posts/softmax-cross-entropy.mdx
+++ b/posts/softmax-cross-entropy.mdx
@@ -6,6 +6,7 @@ categories:
   - Mathematics
   - Machine Learning
 description: A simple walkthrough to deriving the derivative ( with code ) for the cross entropy loss
+hide: true
 ---
 
 ## Introduction
