--- a/posts/uploading-files-to-r2-in-nextjs.mdx
+++ b/posts/uploading-files-to-r2-in-nextjs.mdx
@@ -5,6 +5,7 @@ categories:
   - FastAI
   - Machine Learning
 description: Configure File Uploads to R2 from NextJS's new App directory using Server Actions
+hide: true
 ---
 
 ## Introduction 
