--- a/posts/using-cloudflare-workers-in-nextjs.mdx
+++ b/posts/using-cloudflare-workers-in-nextjs.mdx
@@ -6,6 +6,7 @@ categories:
   - Cloudflare Workers
 description:
   R2's really cheap with zero egress - you should take advantage of it.
+hide: true
 ---
 
 This is the first part of a multipart series on how to handle file uploads with
