--- a/posts/whispers-in-the-background.mdx
+++ b/posts/whispers-in-the-background.mdx
@@ -6,7 +6,7 @@ categories:
   - ML
   - Whisper
   - MLE
-description: A first stab at an architecture that allows for transcripts to be generated for user uploads
+description: Implementing an Event-Driven approach for whisper transcriptions
 ---
 
 <KommyImage blogImage={true} src = "https://user-images.githubusercontent.com/45760326/235455711-4dd33dde-88f9-456f-b5b5-c1c26e638576.png" width = {400} height = {400} />
