Fixed up website

--- a/posts/machine-learning-roadmap.mdx
+++ b/posts/machine-learning-roadmap.mdx
@@ -13,6 +13,21 @@ draft: true
 
 A journal of everything I've accomplished as a Software Engineer interested in learning more about AI.
 
+### November
+
+I started working on the Instructor library and published two articles with them along with getting some MRs into the codebase merged! The published articles were 
+
+- [Smarter Summaries w/Finetuning GPT-3.5 and Chain Of Density](https://jxnl.github.io/instructor/blog/2023/11/05/chain-of-density/)
+- [Good LLM Validation is Just Good Validation](https://jxnl.github.io/instructor/blog/#good-llm-validation-is-just-good-validation)
+
+On the side I continued working on more agent code and deployed a small telegram bot called Conseil which tracks todos and can understand basic natural language queries to interact with the database. 
+
+So far I've read the papers 
+- [Direct Preference Optimization: Your Language Model is Secretly a Reward Model](https://arxiv.org/abs/2305.18290)
+- [Training language models to follow instructions with human feedback](https://arxiv.org/abs/2203.02155)
+
+and I think there'll be a good more to come for the rest of the month
+
 ### October
 
 I've tried to split my time in two in october - doing more LLM stuff while simultaneously trying to delve deeper into the theory behind more classical machine learning.
@@ -29,7 +44,7 @@ This month I worked on two main projects
 - [Using GPT4 To generate React Components using the @shadcn/ui library](blog/gpt_react)
 - Creating an Arxiv Crawler
 
-I also finally got around to finishing up a [quick article](blog/deriving_the_derivative_for_a_softmax_cross_entropy) on the derivation of the softmax and cross entropy loss which I worked through in CS321n.
+I also finally got around to finishing up a [quick article](blog/deriving_the_derivative_for_a_softmax_cross_entropy) on the derivation of the softmax and cross entropy loss which I worked through in CS321n. I struggled with it for quite some time and thought it might help others.
 
 ### September
 
