Fixed up a new article

--- a/posts/machine-learning-roadmap.mdx
+++ b/posts/machine-learning-roadmap.mdx
@@ -9,9 +9,27 @@ description: I'm planning to break into the ML side of things - here's what I ha
 draft: true
 ---
 
-## The Progress
+
 
 A journal of everything I've accomplished as a Software Engineer interested in learning more about AI.
+
+## 2024
+
+### January
+
+January was a slow start! I had the opportunity to spend it in Germany for the first part and I really enjoyed being able to enjoy some time with family.
+
+I've been delving deeper into open source models and experimenting with Cohere's re-ranker. That's how I learnt about batch processing data when Nils Reimer started correcting my usage on [twitter](https://twitter.com/ivanleomk/status/1745413367282663791) and discovered that you should not be using a re-ranker model to evaluate textual similarity. Ended up also learning about these new cool metrics such as AUC and Precision to evaluate my results which has been interesting.
+
+I also started a [paper club](https://lu.ma/llm-paper-asia) under Latent Space to help increase interest in LLMs starting with the Attention Is All You Need paper. 
+
+## 2023
+
+### December
+
+In December I slowed down the stuff I was doing and took a slight holiday. I ended up experimenting more with Text to UI platforms and documented how I was able to put together a small front-end demo using MagicPatterns in a short [tweet](https://twitter.com/ivanleomk/status/1743321223155556686/photo/1) breaking down the specific steps that I took and what the intermediate products were.
+
+I also started on some small projects which I expect to be finished and shareable in 2024 March so stay tuned!
 
 ### November
 
