Fixed up a new article

--- a/posts/machine-learning-roadmap.mdx
+++ b/posts/machine-learning-roadmap.mdx
@@ -15,6 +15,16 @@ A journal of everything I've accomplished as a Software Engineer interested in l
 
 ## 2024
 
+### February
+
+February was a rather productive month. I spent some time working with basic hyper-parameter optimization using Optuna for the first time and learnt about how to run a simple experiment. I managed to run 3 more sessions of the paper club, where we covered
+
+- [BERT](https://llm-paper-club-asia-notes.vercel.app/papers/bert)
+- [T5](https://llm-paper-club-asia-notes.vercel.app/papers/text-to-text)
+- Self-Rewarding Language Models
+
+I also published a new article on [writing better python code](/blog/write_code_to_refactor) on some of the key changes in the way I write python code after working in python for the last 5 months. 
+
 ### January
 
 January was a slow start! I had the opportunity to spend it in Germany for the first part and I really enjoyed being able to enjoy some time with family.
